adds JQuery to the page

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
         <button id="powersaving-off">PSM OFF</button>
       </p>
     </section>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="src/interface.js"></script>
     <script src="src/thermostat.js"></script>
   </body>
 </html>
