--- a/index.html
+++ b/index.html
@@ -5,8 +5,14 @@
     <script src="lib/interface.js"></script>
   <title> Thermostat </title>
   <style>
-
-
+  * {color: #404040;}
+  button {background: rgba(255,255,255,0);
+        border: 2px solid #404040;
+        border-radius: 4px;
+        width: 100px;}
+body {background: #fff;}
+h1 {font-size: 26px;}
+  #color {background: red}
   </style>
 </head>
 <body>
