--- a/index.html
+++ b/index.html
@@ -4,26 +4,31 @@
 <head>
 	<meta charset="utf-8">
 	<title>Thermostat</title>
-  <script src="jquery-3.1.0.js"></script>
-  <script src = "interface.js"></script>
-    <link href="src/energyUsage.css" rel="stylesheet" type="text/css">
+	<script src="jquery-3.1.0.js"></script>
+	<script src="interface.js"></script>
+	<link href="src/energyUsage.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
 	<section>
-		<h1 id="temperature">
+		<h1> Room temperature - <span id="temperature"></span> C</h1>
+		<h2> Temperature outside - <span id="current-weather">...</span> C</h2>
 
-    </h1>
+		<form id="select-city">
+			<input id="current-city" type="text" placeholder="Enter a city"></input>
+			<input type="submit" value="OK"></input>
+		</form>
+
 		<p>
-			<button id="temp-up">+</button>
-			<button id="temp-down">-</button>
-      <button id="reset">RESET</button>
+			<button id="temp-up" style="background-color:red">+</button>
+			<button id="temp-down" style="background-color:blue">-</button>
+			<button id="reset">RESET</button>
 			Power saving mode <span id="power-saving-mode">ON</span>
 			<button id="power-saving-on">PSM ON</button>
 			<button id="power-saving-off">PSM OFF</button>
 		</p>
 	</section>
-  <script src="src/Thermostat.js"></script>
+	<script src="src/Thermostat.js"></script>
 </body>
 
 </html>
