--- a/index.html
+++ b/index.html
@@ -7,9 +7,15 @@
 	<script src="jquery-3.1.0.js"></script>
 	<script src="interface.js"></script>
 	<link href="src/energyUsage.css" rel="stylesheet" type="text/css">
+	<link href="src/reset.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
+	<header>
+		<div id="logo">
+			<a style="color:white">THERMOSTAT</a>
+		</div>
+	</header>
 	<section>
 		<h1> Room temperature - <span id="temperature"></span> C</h1>
 		<h2> Temperature outside - <span id="current-weather">...</span> C</h2>
